285694 - Build results page (#10)
* Serach results page UI & API changes

* 285694 - Fixed failed test cases

* Added unit test for Search Results Handler

* Changes for date filter and field mapping in results page.

* Updated test execution timeout config to 20000

* Reverted test execution timeout config to 9000

* Added unit tests for Models

* Added unit test for ApiResponse

* Fix PR comments.
1. updated json key names
2. refactored the code.

* 285694 - Fixing the failed test cases in the pipeline

* Updated Api url from http to https

* 285694 - Reverting the folder name change

* 285694 - Adding https protocol to fix the security issue in sonar

* Added searchApiUrl to Constants

--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -18,6 +18,7 @@
     ]
   }) }}
 {% endblock %}
+
 {% block content %}
 
   {{ quickSearch({
@@ -25,4 +26,49 @@
     searchTerm: searchTerm
   }) }}
 
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+      <p>&nbsp;</p>
+    </div>
+    <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-section-break--visible">
+        <h2 class="govuk-heading-m">{{searchResults.hits.total.value}} results</h2>
+      </div>
+      {%- if hasResult == true -%}
+      {%- if searchResults.hits.total.value > 0 -%}
+      {% for item in searchResults.hits.hits %}
+        <div class="govuk-section-break--visible">
+          <h2 class="govuk-heading-m">{{item._source.resourceTitleObject.default}}</h2>
+          <p class="govuk-caption-m govuk-!-font-size-14">
+            <b>Published by</b>
+            <span class="govuk-!-padding-left-5">
+              {% if item._source.contact|length > 0 %}
+              {{item._source.contact[0].organisationObject.default}}
+              {% endif %}
+            </span></p>
+          <p class="govuk-caption-m govuk-!-font-size-14">
+            <b>Study period</b>
+            <span class="govuk-!-padding-left-5">
+              {% if item._source.resourceTemporalExtentDetails|length > 0 %}
+              {{item._source.resourceTemporalExtentDetails[0].start.date | date("DD MMM YYYY")}} to {{item._source.resourceTemporalExtentDetails[0].end.date | date("DD MMM YYYY")}}
+              {% endif %}
+            </span></p>
+          <p class="govuk-body">{{item._source.resourceAbstractObject.default}}</p>
+          <button type="submit" class="govuk-button govuk-button--primary" data-module="govuk-button">
+          Open data
+        </button>
+          <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+          More info
+        </button>
+        </div>
+      {% endfor %}
+      {%- else -%}
+        <p class="govuk-caption-m govuk-!-font-size-14">No results.</p>
+      {%- endif -%}
+      {%- else -%}
+        <p class="govuk-caption-m govuk-!-font-size-14">Unable to fetch the search results. Please try again.</p>
+      {%- endif -%}
+
+    </div>
+  </div>
 {% endblock %}
